Resolved overflow issue
Overflow was not properly set on the container. Set it with PrimeFlex CSS classes.

--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -22,5 +22,5 @@ img {
 }
 
 .dashboard-container {
-    max-height: 600px !important;
+    width: 100%;
 }
